--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,12 @@ envlist = py{27,34}
 basepython =
     py27: python2.7
     py34: python3.4
-commands = py.test tests
+
+commands =
+    coverage run --source main --branch -m py.test tests
+    coverage report --show-missing
+
 deps =
     pytest
     pytest-sugar
+    coverage
