Only run generator tests on Py3

--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,9 @@ basepython =
     py34: python3.4
 
 commands =
-    coverage run --source main --branch -m py.test tests
-    coverage report --show-missing
+    py27: py.test tests/test_content.py
+    py34: coverage run --source main --branch -m py.test tests
+    py34: coverage report --show-missing
 
 deps =
     pytest
