--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ commands =
     py27: py.test tests/test_content.py
     py34: coverage run --source main --branch -m py.test tests
     py34: coverage report --show-missing
+    py34: coverage html
 
 deps =
     pytest
