Also cover tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ basepython =
 
 commands =
     py27: py.test tests/test_content.py
-    py34: coverage run --source main --branch -m py.test tests
+    py34: coverage run --source main,tests --branch -m py.test tests
     py34: coverage report --show-missing
     py34: coverage html
 
