Also run content tests on Py 3.2 and 3.3

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-envlist = py{27,34}
+envlist = py{27,32,33,34}
 
 [testenv]
-basepython =
-    py27: python2.7
-    py34: python3.4
+; basepython =
+;     py27: python2.7
+;     py34: python3.4
 
 commands =
-    py27: py.test tests/test_content.py
+    py{27,32,33}: py.test tests/test_content.py
     py34: coverage run --source main,tests --branch -m py.test tests
     py34: coverage report --show-missing
     py34: coverage html
