--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py{27,32,33,34}
 [testenv]
 commands =
     py{27,32,33}: py.test tests/test_content.py
-    py34: coverage run --source main,tests --branch -m py.test tests
+    py34: coverage run --source main,tests --branch -m py.test {posargs:tests}
     py34: coverage report --show-missing
     py34: coverage html
 
@@ -12,3 +12,4 @@ deps =
     pytest
     pytest-sugar
     coverage
+    wrapt
