--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,25 @@
 [tox]
-envlist = py{27,32,33,34}
+envlist = py{27,32,33,34,35},coverage
 
 [testenv]
+# We need to special case py35 until pytest > 2.7.2 is released.
+# See https://github.com/pytest-dev/pytest/pull/801
 commands =
-    py{27,32,33}: py.test tests/test_content.py
-    py34: coverage run --source main,tests --branch -m py.test {posargs:tests}
-    py34: coverage report --show-missing
-    py34: coverage html
+    py{27,32,33}: py.test {posargs:tests/test_content.py}
+    py34: coverage run --parallel-mode --branch -m py.test {posargs:tests}
+    py35: coverage run --parallel-mode --branch -m py.test --assert plain {posargs:tests}
 
 deps =
     pytest
     pytest-sugar
-    coverage
+    coverage==4.0b3
     wrapt
+
+[testenv:coverage]
+commands =
+    coverage combine
+    coverage html
+    coverage report --show-missing
+
+deps =
+    coverage==4.0b3
