--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,8 @@
 envlist = py{27,32,33,34,35},coverage
 
 [testenv]
-# We need to special case py35 until pytest > 2.7.2 is released.
-# See https://github.com/pytest-dev/pytest/pull/801
 commands =
-    py{27,32,33}: py.test {posargs:tests/test_content.py}
-    py34: coverage run --parallel-mode --branch -m py.test {posargs:tests}
-    py35: coverage run --parallel-mode --branch -m py.test --assert plain {posargs:tests}
+    py.test {posargs:tests/test_content.py}
 
 deps =
     pytest
