--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,32,33,34,35},coverage
+envlist = py{27,33,34,35},coverage
 
 [testenv]
 commands =
@@ -8,7 +8,7 @@ commands =
 deps =
     pytest
     pytest-sugar
-    coverage==4.0b3
+    coverage==4.2
     wrapt
 
 [testenv:coverage]
@@ -18,4 +18,4 @@ commands =
     coverage report --show-missing
 
 deps =
-    coverage==4.0b3
+    coverage==4.2
