--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{27,33,34,35},coverage
+envlist = py{27,33,34,35}
 
 [testenv]
 commands =
@@ -8,14 +8,4 @@ commands =
 deps =
     pytest
     pytest-sugar
-    coverage==4.2
     wrapt
-
-[testenv:coverage]
-commands =
-    coverage combine
-    coverage html
-    coverage report --show-missing
-
-deps =
-    coverage==4.2
