WIP v2: Switch to lektor; Content migrated; No Style jet

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 [tox]
-envlist = py{27,33,34,35}
+mintoxversion=2.3
+envlist = py{27,33,34,35,36}
+skipsdist = True
 
 [testenv]
-commands =
-    py.test {posargs:tests/test_content.py}
-
+passenv = LANG LC_ALL TERM
 deps =
-    pytest
-    pytest-sugar
-    wrapt
+    -rrequirements.txt
+    pytest==3.0.2
+    py{27,33}: pathlib
+commands =
+    pytest {posargs:test_examples.py}
