--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ install:
   - pip install tox
 
 script:
-  - "tox -e ${TRAVIS_PYTHON_VERSION/[0-9].[0-9]/py${TRAVIS_PYTHON_VERSION/.}}"
+  - "tox -e ${TRAVIS_PYTHON_VERSION/[0-9].[0-9]/py${TRAVIS_PYTHON_VERSION/.}} -- --verbose"
