Switch to pip-tools for deps management; Add pre-commit

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,7 @@ skipsdist = True
 [testenv]
 passenv = LANG LC_ALL TERM
 deps =
-    -rrequirements.txt
-    pytest==3.0.2
-    py{27,33}: pathlib
+    pip-tools
 commands =
-    lektor plugins reinstall
+    pip-sync requirements.txt
     pytest {posargs:test_examples.py}
